[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Quit.gd" type="Script" id=1]
[ext_resource path="res://Assets/SFX/Win sound.wav" type="AudioStream" id=2]
[ext_resource path="res://UI/WinScreen.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/Comfortaa.tres" type="DynamicFont" id=5]

[node name="WinScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
mouse_filter = 2
color = Color( 0.164706, 0.517647, 0.541176, 0 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "You Saved Everyone"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="ColorRect2" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.0980392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="ColorRect2"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -180.0
margin_right = 704.0
margin_bottom = -20.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 5 )
text = "Quit"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Continue" type="Button" parent="ColorRect2"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = -20.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 5 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Menu" type="Button" parent="ColorRect2"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -127.0
margin_top = -698.0
margin_right = 513.0
margin_bottom = -538.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 5 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0

[node name="Tween2" type="Tween" parent="."]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="ColorRect2/Quit" to="ColorRect2/Quit" method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect2/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="ColorRect2/Menu" to="." method="_on_Menu_pressed"]
[connection signal="timeout" from="ButtonTimer" to="." method="_on_ButtonTimer_timeout"]
